styles/main.css
/* ... */
@media (min-width: 1024px) {
.welcome {
    padding-top: 9rem;
}
.page-content {

    /* margin-bottom: 3rem; */
}
.intro h2 {
    line-height: 3rem;
    
}
.intro p {
    font-size: 1rem;
}
.about-container {
    display:flex;
    margin: 3rem;
} 
span {
    font-size: 5rem;
  }
.about-selfie {
    height: 475px;
    margin-top: 1rem;
}
.head-shot {
    border-radius: 50%;
    margin-left: 3rem;
    margin-bottom: 1rem;
    height: 350px;
    width: 350px;
}
.feat-head h4{
    font-size: 1.2rem;
    font-weight: 400;
}
.discipline-intro {
    margin: 3rem 12rem 3rem 12rem;
}
.art-container p {
    font-size:1.2rem;
}
.petuina-bio li {
    font-size: 1.2rem;
}
.welcome h2 {
    font-size: 3.2rem;
}
.cato-logo {
    max-width: 500px;
    display: flex;
    margin: 0 auto;
    padding-top: 1rem;
}
.functionallity li {
    font-size: 1.5rem;
    line-height: 3rem;
}
.art-container h2 {
    font-size: 3rem;
}
.persona {
    margin-top: 1rem;
    padding: 3rem 5rem;
}
.persona p{
    line-height: 2.7rem;
}
.petuina {
        width: 350px;
        height: 520px;
        object-fit: cover;
        margin-top: -50px;


    }
.persona h5 {
    padding-bottom: 1.5rem;
}
.persona p {
    padding-bottom: 1.5rem;
}
.user-goals {
    padding-bottom: 3rem;
}
.user-goals h2 {
    padding-bottom: 2rem;
}
.user-goals li {
    font-size: 1.5rem;
    line-height: 3rem;
}
.market {
    margin-bottom: 3rem;
}
.market h3 {
    font-weight: 400;
    font-size: 2rem;
    margin-top: 1.5rem;
}
.market h4 {
    font-size: 1.7rem;
    padding-bottom: 1rem;
}
.market p {
    font-size: 1.5rem;
    padding-bottom: 1.5rem;
}

}

@media (min-width: 1200px) {
.art-container {
    margin-left: 5rem;
    margin-right: 5rem;
}
.head-shot {
    margin-top: 1rem;

}
.thumb-img {
    max-width: 320px;
}

.welcome {
    display: flex;
    /* justify-content: space-around; */
    justify-content: center;
    padding-top: 2rem;
    /* padding-bottom: 10rem; */

}
.intro h2 {
    font-weight: 700;
    font-size: 3rem;
    letter-spacing: .2rem;
    line-height: 2.6rem; 
    padding-bottom: 1rem;
}
.intro h1 {
    font-weight: 200;
    font-size: 1.7rem;
    letter-spacing: .1rem;
}

.feature-section {
    gap: 16px;
}
.feat-head {
    padding-right: 53rem;
}
.feat-head h4{
    font-size: 1.4rem;
    font-weight: 400;
}

.discipline-intro h2 {
    font-weight: 700;
    font-size: 3rem;
    letter-spacing: .2rem;
    padding-bottom: .3rem;
}  
.discipline-intro h1 {
    font-weight: 400;
    font-size: 1.75rem;
    letter-spacing: .2rem;
}
.discipline-intro {
    margin: 3rem 6rem 3rem 6rem;
}


  .about-container{
    margin-top: 2rem;
    margin-left: 5rem;

  }
  .cato-section .thumb-img {
    max-width: 600px;
}
}

@media (min-width: 1440px) {
    .welcome {
        margin: -1rem;
        padding-top: 5rem;
        padding-bottom: 5rem;
    }
    
    .intro h2 {
        /* margin-left: -9rem;
        font-weight: 700;
        font-size: 5rem;
        letter-spacing: .2rem;
        line-height: 1.2; */
    }


    .intro {
        margin: 3rem 5rem;
    }
    .head-shot {
        height: 450px;
        width: 450px;
        margin-right: 5rem;

    }
    .about-container {
        margin-left: 8rem;
    }
    .art-container {
        margin-left: 12rem;
        margin-right: 12rem;
    }
    .about-selfie {
        height: 600px;
        width: auto;
        margin-top: 2rem;
    }
    
    .card-content .card-desc {
        font-size: 1.4rem;
    }
    .card {
        background-color: #FCF5EB;
        width: 1100px;
        height: 304px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        box-shadow: 0 8px 12px 0px rgba(0,0,0,0.2);
        border-radius: 15px ;
        text-decoration: none;
    }
    .card-text {
        color: #475826;
        padding: 1.4rem;
        text-decoration: none;
        margin-left: 37rem;
        margin-top: -20rem;
        
    }
    
    .card-content .card-desc {
        font-size: 1.2rem;
        
    
    }
    .card-content .card-dis {
        font-size: 1.4rem;
    
    }
    .card-content h4 {
        font-size: 2rem;
        font-weight: 400;
        line-height: 2rem;
         margin: 1rem;
    
    }
    
    .card-content p {
        font-size: 1.2rem;
        margin: 1rem;
        line-height: 1.4rem;
    }
    .card img {
        width: auto;
        height: 304px;
        max-width: 700px;
        overflow: hidden;
        object-fit: cover;
        border-radius: 15px 0 0 15px;
    } 
    .card-img .banner_small{
        display: block;
    }
    .card-img .banner {
        display: none;
    }
    .btn {
        margin-top: 2.5rem;
    }

    .bn3637 {
        display: inline-flex;
        align-items: center;
        justify-content: center;
        padding: 0.3rem .5rem;
        font-weight: 400;
        font-size: 1rem;
        letter-spacing: .4rem;
        text-align: center;
        text-decoration: none;
        color: #FAF0E1;
        background-color: #808E4A;
        backface-visibility: hidden;
        border: 0.3rem solid transparent;
        border-radius: 3rem;
      }

    }

